# market-insites

backend/: .env  .gitignore  Cargo.toml
backend/crates/application/: Cargo.toml
backend/crates/application/src/: lib.rs
backend/crates/application/src/infra/api/: mod.rs
backend/crates/application/src/infra/api/census/naics/: implement.rs  mod.rs  model.rs
backend/crates/application/src/usecase/trade/: naics.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: lib.rs
backend/crates/domain/src/entity/trade/: mod.rs  naics.rs
backend/crates/domain/src/valueobject/: mod.rs
backend/crates/domain/src/valueobject/trade/: mod.rs  time.rs
backend/crates/domain/src/valueobject/trade/country/: code.rs  mod.rs  name.rs
backend/crates/domain/src/valueobject/trade/naics/: code.rs  mod.rs
backend/crates/domain/src/valueobject/trade/value/: mod.rs  month.rs  year.rs
backend/crates/kernel/: Cargo.toml
backend/crates/kernel/src/: core.rs
backend/crates/macros/: Cargo.toml
backend/crates/macros/src/: field_paris.rs  generate_req.rs  lib.rs  request.rs
backend/presentation/: Cargo.toml
