[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.9" , features = ["json", "blocking"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.36"
anyhow = "1.0"
sqlx = { version = "0.7.4", features = [ "postgres", "runtime-tokio-native-tls" ]}

domain = { path = "../domain" }
kernel = { path = "../kernel" }
macros = { path = "../macros" }